<resources>
    <string name="app_name">Popular Movies</string>
    <string name="app_name_default">Popular Movies</string>
    <string name="app_name_popular">Popular Movies</string>
    <string name="app_name_rating">Top Rated Movies</string>
    <string name="app_name_fav">Favorite Movies</string>

    <!-- Details Activity -->
    <string name="details_label">Movie Details</string>
    <string name="details_trailers">Trailers:</string>
    <string name="details_reviews">Reviews:</string>
    <string name="details_mark_as_favorite">Mark as Favorite</string>
    <string name="details_unmark_as_favorite">Unmark as Favorite</string>
    <string name="details_popularity">%.1f</string>
    <string name="details_rating">%.1f/10</string>



    <!-- Details Activity Bundle Keys -->
    <string name="details_bundle_key" translatable="false">details_bundle_key</string>
    <string name="details_title_key" translatable="false">details_title_key</string>
    <string name="details_id_key" translatable="false">details_id_key</string>
    <string name="details_year_key" translatable="false">details_year_key</string>
    <string name="details_popularity_key" translatable="false">details_popularity_key</string>
    <string name="details_rating_key" translatable="false">details_rating_key</string>
    <string name="details_synopsis_key" translatable="false">details_synopsis_key</string>
    <string name="details_img_path_key" translatable="false">details_img_path_key</string>
    <string name="details_backdrop_path_key" translatable="false">details_backdrop_path_key</string>

    <!-- PreferenceScreen Keys & Labels -->
    <string name="pref_sort_order_key" translatable="false">pref_sort_order_key</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_popularity_key" translatable="false">pref_sort_order_popularity_key</string>
    <string name="pref_sort_order_rating_key" translatable="false">pref_sort_order_rating_key</string>
    <string name="pref_sort_order_favorites_key" translatable="false">pref_sort_order_favorites_key</string>
    <string name="pref_sort_order_rating_label">Rating</string>
    <string name="pref_sort_order_popularity_label">Popularity</string>
    <string name="pref_sort_order_favorites_label">Favorites</string>

    <string name="pref_videos_key" translatable="false">pref_videos_key</string>
    <string name="pref_videos_label">Video Player</string>
    <string name="pref_videos_embedded_label">Embedded Player</string>
    <string name="pref_videos_embedded_key" translatable="false">pref_videos_embedded_key</string>
    <string name="pref_videos_external_label">External Player</string>
    <string name="pref_videos_external_key" translatable="false">pref_videos_external_key</string>

    <string name="pref_category_sorting_label">Sorting</string>
    <string name="pref_category_player_label">Player</string>




    <!-- Menu Actions -->
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_share" translatable="false">Share</string>

    <!-- VIDEOS & REVIEWS -->
    <string name="details_videos_no_videos">No videos to show.</string>
    <string name="details_reviews_no_reviews">No reviews to show.</string>

    <!-- Share Action Provider -->
    <string name="movie_share_string">Check this out: %s (%d) has %s rating! #ITSector</string>

    <!-- Toasts -->
    <string name="toast_network_error">Error connecting to the API. Check your internet connection!</string>

    <!-- Edit Text Hints -->
    <string name="search_box_hint">Type your search here...</string>

</resources>
