<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 ITSector Software. All rights reserved.
  ~ ITSector Software Confidential and Proprietary information. It is strictly forbidden for 3rd
  ~ parties to modify, decompile, disassemble, defeat, disable or circumvent any protection
  ~ mechanism; to sell, license, lease, rent, redistribute or make accessible to any third party,
  ~ whether for profit or without charge.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_sort_order_key"
        android:title="@string/pref_sort_order_label"
        android:entries="@array/pref_sort_order_entries"
        android:entryValues="@array/pref_sort_order_entry_values"
        android:defaultValue="@string/pref_sort_order_popularity_key"
        />
</PreferenceScreen>