<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 ITSector Software. All rights reserved.
  ~ ITSector Software Confidential and Proprietary information. It is strictly forbidden for 3rd
  ~ parties to modify, decompile, disassemble, defeat, disable or circumvent any protection
  ~ mechanism; to sell, license, lease, rent, redistribute or make accessible to any third party,
  ~ whether for profit or without charge.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.DetailsActivity">

            <!-- TITLE WRAPPER -->
            <LinearLayout
                android:id="@+id/details_movie_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/details_left_padding"
                android:paddingLeft="@dimen/details_left_padding"
                android:paddingTop="@dimen/details_title_padding_top"
                android:paddingBottom="@dimen/details_title_padding_bottom"
                tools:background="@drawable/ic_launcher_background">

                <!-- TITTLE -->
                <TextView
                    android:id="@+id/details_movie_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/details_title_text_size"
                    tools:text="Movie Name" />
            </LinearLayout>

            <!-- THUMBNAIL + YEAR + RUNTIME + RATING + FAV BUTTON WRAPPER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_top_specs_margin_top"
                android:orientation="horizontal"
                android:paddingStart="@dimen/details_left_padding"
                android:paddingLeft="@dimen/details_left_padding"
                android:paddingTop="@dimen/details_top_specs_padding_top"
                android:paddingBottom="@dimen/details_top_specs_padding_bottom">

                <!-- THUMBNAIL -->
                <ImageView
                    android:id="@+id/details_movie_thumbnail_image_view"
                    android:layout_width="@dimen/list_item_img_width"
                    android:layout_height="@dimen/list_item_img_height"
                    tools:background="@color/colorAccent" />

                <!-- YEAR + POPULARITY + RATING + FAV BUTTON WRAPPER -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/details_inner_top_specs_margin_top"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/details_left_padding"
                    android:paddingLeft="@dimen/details_left_padding">

                    <!-- YEAR -->
                    <TextView
                        android:id="@+id/details_movie_year_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/details_top_specs_margin_bottom"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:drawablePadding="@dimen/details_top_specs_padding"
                        android:paddingTop="@dimen/details_top_specs_padding_top"
                        android:textSize="@dimen/details_top_specs_text_size"
                        tools:text="2015" />

                    <!-- POPULARITY -->
                    <TextView
                        android:id="@+id/details_movie_popularity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/details_top_specs_margin_bottom"
                        android:drawableLeft="@drawable/ic_fire"
                        android:drawablePadding="@dimen/details_top_specs_padding"
                        android:textSize="@dimen/details_top_specs_text_size"
                        tools:text="473.4" />

                    <!-- RATING -->
                    <TextView
                        android:id="@+id/details_movie_rating_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/details_top_specs_margin_bottom"
                        android:drawableLeft="@drawable/ic_star"
                        android:drawablePadding="@dimen/details_top_specs_padding"
                        android:textSize="@dimen/details_top_specs_text_size"
                        tools:text="8.1/10" />

                    <!-- FAV BUTTON -->
                    <Button
                        android:id="@+id/details_movie_fav_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/details_fav_btn_padding"
                        android:text="@string/details_mark_as_favorite"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

            <!-- DESCRIPTION WRAPPER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/details_left_padding"
                android:paddingLeft="@dimen/details_left_padding"
                android:paddingEnd="@dimen/details_right_padding"
                android:paddingRight="@dimen/details_right_padding">

                <!-- DESCRIPTION -->
                <TextView
                    android:id="@+id/details_movie_plot_synopsys_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempor leo eu ante dictum cursus. Etiam quis convallis massa. Praesent posuere gravida eros quis commodo." />
            </LinearLayout>

            <!-- TRAILERS + REVIEWS LIST WRAPPER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/details_trailers_margin_top"
                android:orientation="vertical"
                android:paddingStart="@dimen/details_left_padding"
                android:paddingLeft="@dimen/details_left_padding">

                <!-- VIDEOS LABEL -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_trailers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <!-- VIDEOS LIST -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/videos_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbarSize="@dimen/details_videos_scrollbar_width"
                    android:scrollbarThumbHorizontal="@drawable/vertical_scrollbar"
                    android:scrollbars="horizontal">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/details_videos_no_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/details_videos_no_video_margin_bottom"
                    android:gravity="center"
                    android:text="@string/details_videos_no_videos" />

                <!-- REVIEWS LABEL -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_reviews_margin_top"
                    android:text="@string/details_reviews"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <!-- REVIEWS LIST -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/reviews_list_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:id="@+id/details_reviews_no_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/details_reviews_no_review_margin_bottom"
                    android:gravity="center"
                    android:text="@string/details_reviews_no_reviews" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>